[gd_scene load_steps=34 format=3 uid="uid://coglhc2ygmt3u"]

[ext_resource type="Script" path="res://scripts/composicionGame.gd" id="1_7fgy0"]
[ext_resource type="Texture2D" uid="uid://bnciexufp6as8" path="res://2d_assets/TecladoPiano/madera.png" id="1_dnsib"]
[ext_resource type="PackedScene" uid="uid://cqkee1txao4bt" path="res://tecla_der.tscn" id="2_ucd5f"]
[ext_resource type="PackedScene" uid="uid://crg8ohrchtebn" path="res://tecla_izq.tscn" id="3_0v2p7"]
[ext_resource type="StyleBox" uid="uid://dww7bpq7cxks6" path="res://font/estiloBoton.tres" id="3_6kdvu"]
[ext_resource type="Texture2D" uid="uid://k3uaj7ukmtnh" path="res://2d_assets/delete/delete.png" id="3_7ruax"]
[ext_resource type="StyleBox" uid="uid://c8au3hv2f2nry" path="res://font/hoverBoton.tres" id="4_4l70p"]
[ext_resource type="Texture2D" uid="uid://2uk2ji0k0ukm" path="res://2d_assets/completado/completado.png" id="4_jxitd"]
[ext_resource type="PackedScene" uid="uid://bx8gb2l6a4dys" path="res://tecla_negra.tscn" id="4_kmn7o"]
[ext_resource type="StyleBox" uid="uid://d0eslds5p0407" path="res://font/pressBoton.tres" id="5_cafb1"]
[ext_resource type="PackedScene" uid="uid://dch88d3n8wygm" path="res://partitura.tscn" id="5_gh5ej"]
[ext_resource type="PackedScene" uid="uid://ccg565ae8atej" path="res://barra_gui.tscn" id="6_yuc5j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11ost"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.027451, 0.462745, 0.639216, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 35.0
expand_margin_top = 35.0
expand_margin_right = 35.0
expand_margin_bottom = 35.0
shadow_size = 1
shadow_offset = Vector2(2, 0)
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_khfy7"]
bg_color = Color(0.760784, 0.894118, 0.996078, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.027451, 0.462745, 0.639216, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 35.0
expand_margin_top = 35.0
expand_margin_right = 35.0
expand_margin_bottom = 35.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8eaog"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gbx7j"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uoa06"]
bg_color = Color(0.811765, 0.698039, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mya3w"]
bg_color = Color(1, 0.492321, 0.830741, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1be1q"]
size = Vector2(393.22, 2389.83)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c85u6"]
bg_color = Color(0.884518, 0.63057, 0.557498, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mf62"]
bg_color = Color(0.589815, 0.685044, 0.996215, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_22aby"]
bg_color = Color(0.702067, 0.653337, 0.951293, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lm4e1"]
bg_color = Color(0.362483, 0.819786, 0.283579, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_01edb"]
bg_color = Color(1, 0.554097, 0.526401, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5pfu"]
bg_color = Color(0.763087, 0.698527, 0.500807, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dyhk"]
bg_color = Color(0.185533, 0.759266, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hcy0r"]
bg_color = Color(0.495433, 0.769319, 0.636339, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qyyqe"]
bg_color = Color(0.927244, 0.632457, 0.179512, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lykuo"]
bg_color = Color(0.789825, 0.647213, 0.78623, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yg582"]
bg_color = Color(0.136826, 0.136826, 0.136826, 1)
border_width_bottom = 3
border_color = Color(0.623253, 0.148097, 0.183121, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xuex3"]
bg_color = Color(0.812588, 0.941608, 0.998016, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjtqb"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.027451, 0.462745, 0.639216, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
expand_margin_left = 25.0
expand_margin_top = 10.0
expand_margin_right = 25.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5b1t"]
draw_center = false

[node name="composicionGame" type="Node2D"]
script = ExtResource("1_7fgy0")
metadata/_edit_vertical_guides_ = [754.0, 1170.0]

[node name="Madera" type="TextureRect" parent="."]
offset_top = 495.0
offset_right = 1965.0
offset_bottom = 1083.0
texture = ExtResource("1_dnsib")

[node name="botonDelete" type="Button" parent="Madera"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.939
anchor_top = 0.509
anchor_right = 0.939
anchor_bottom = 0.509
offset_left = -58.1351
offset_top = -54.292
offset_right = 371.865
offset_bottom = 406.708
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_11ost")
theme_override_styles/pressed = SubResource("StyleBoxFlat_khfy7")
theme_override_styles/focus = SubResource("StyleBoxFlat_8eaog")
icon = ExtResource("3_7ruax")

[node name="LabelDelete" type="Label" parent="Madera"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.936
anchor_top = 0.348
anchor_right = 0.936
anchor_bottom = 0.348
offset_left = -51.2401
offset_top = -32.624
offset_right = 52.7599
offset_bottom = 26.376
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -6
theme_override_font_sizes/font_size = 20
text = "Eliminar Nota"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="botonComplete" type="Button" parent="Madera"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.939
anchor_top = 0.509
anchor_right = 0.939
anchor_bottom = 0.509
offset_left = -1812.14
offset_top = -54.292
offset_right = -1382.14
offset_bottom = 406.708
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_11ost")
theme_override_styles/pressed = SubResource("StyleBoxFlat_khfy7")
theme_override_styles/focus = SubResource("StyleBoxFlat_gbx7j")
icon = ExtResource("4_jxitd")

[node name="LabelComplete" type="Label" parent="Madera"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.936
anchor_top = 0.348
anchor_right = 0.936
anchor_bottom = 0.348
offset_left = -1805.24
offset_top = -32.624
offset_right = -1701.24
offset_bottom = 26.376
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -6
theme_override_font_sizes/font_size = 20
text = "Terminar Composición"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Do" parent="." instance=ExtResource("2_ucd5f")]
position = Vector2(172, 486)
scale = Vector2(1, 0.55)

[node name="AreaDo" type="Area2D" parent="Do"]
scale = Vector2(0.565, 0.565)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Do/AreaDo" groups=["Teclas"]]
polygon = PackedVector2Array(3.5461, 3.5461, 297.872, 3.5461, 297.872, 1230.5, 319.149, 1250, 395.39, 1250, 395.39, 1900.71, 3.5461, 1900.71)

[node name="LabelDo" type="Label" parent="Do"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 67.0
offset_top = 909.091
offset_right = 152.0
offset_bottom = 996.091
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_uoa06")
text = "Do"
horizontal_alignment = 1

[node name="Re" parent="." instance=ExtResource("3_0v2p7")]
position = Vector2(397, 486)
scale = Vector2(1, 0.55)

[node name="AreaRe" type="Area2D" parent="Re"]
scale = Vector2(0.57, 0.57)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Re/AreaRe" groups=["Teclas"]]
polygon = PackedVector2Array(101.064, 3.5461, 395.39, 3.5461, 397.163, 1900.71, 3.5461, 1900.71, 3.5461, 1250, 83.3333, 1250, 102.837, 1218.09)

[node name="LabelRe" type="Label" parent="Re"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 67.0
offset_top = 909.091
offset_right = 152.0
offset_bottom = 996.091
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_mya3w")
text = "Re"
horizontal_alignment = 1

[node name="Do#" parent="." instance=ExtResource("4_kmn7o")]
position = Vector2(338, 487)
scale = Vector2(1, 0.55)

[node name="AreaDo#" type="Area2D" parent="Do#"]
scale = Vector2(0.295, 0.295)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Do#/AreaDo#" groups=["Teclas"]]
position = Vector2(200, 1198.31)
shape = SubResource("RectangleShape2D_1be1q")

[node name="LabelDo#" type="Label" parent="Do#"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = 603.636
offset_right = 105.0
offset_bottom = 676.636
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_c85u6")
text = "Do#"
horizontal_alignment = 1

[node name="Mi" parent="." instance=ExtResource("3_0v2p7")]
position = Vector2(626, 486)
scale = Vector2(1, 0.55)

[node name="AreaMi" type="Area2D" parent="Mi"]
scale = Vector2(0.565, 0.565)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Mi/AreaMi" groups=["Teclas"]]
polygon = PackedVector2Array(101.064, 3.5461, 395.39, 3.5461, 397.163, 1900.71, 3.5461, 1900.71, 3.5461, 1250, 83.3333, 1250, 102.837, 1218.09)

[node name="LabelMi" type="Label" parent="Mi"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 76.0
offset_top = 907.273
offset_right = 161.0
offset_bottom = 994.273
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_3mf62")
text = "Mi"
horizontal_alignment = 1

[node name="Re#" parent="." instance=ExtResource("4_kmn7o")]
position = Vector2(573, 487)
scale = Vector2(1, 0.55)

[node name="AreaRe#" type="Area2D" parent="Re#"]
scale = Vector2(0.295, 0.295)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Re#/AreaRe#" groups=["Teclas"]]
position = Vector2(200, 1198.31)
shape = SubResource("RectangleShape2D_1be1q")

[node name="LabelRe#" type="Label" parent="Re#"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = 603.636
offset_right = 105.0
offset_bottom = 676.636
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_22aby")
text = "Re#"
horizontal_alignment = 1

[node name="Fa" parent="." instance=ExtResource("2_ucd5f")]
position = Vector2(850, 486)
scale = Vector2(1, 0.55)

[node name="AreaFa" type="Area2D" parent="Fa"]
scale = Vector2(0.565, 0.565)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Fa/AreaFa" groups=["Teclas"]]
polygon = PackedVector2Array(3.5461, 3.5461, 297.872, 3.5461, 297.872, 1230.5, 319.149, 1250, 395.39, 1250, 395.39, 1900.71, 3.5461, 1900.71)

[node name="LabelFa" type="Label" parent="Fa"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 76.0
offset_top = 907.273
offset_right = 161.0
offset_bottom = 994.273
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_lm4e1")
text = "Fa"
horizontal_alignment = 1

[node name="Sol" parent="." instance=ExtResource("3_0v2p7")]
position = Vector2(1073, 486)
scale = Vector2(1, 0.55)

[node name="AreaSol" type="Area2D" parent="Sol"]
scale = Vector2(0.565, 0.565)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sol/AreaSol" groups=["Teclas"]]
polygon = PackedVector2Array(101.064, 3.5461, 395.39, 3.5461, 397.163, 1900.71, 3.5461, 1900.71, 3.5461, 1250, 83.3333, 1250, 102.837, 1218.09)

[node name="LabelSol" type="Label" parent="Sol"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 76.0
offset_top = 907.273
offset_right = 161.0
offset_bottom = 994.273
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_01edb")
text = "Sol"
horizontal_alignment = 1

[node name="Fa#" parent="." instance=ExtResource("4_kmn7o")]
position = Vector2(1015, 486)
scale = Vector2(1, 0.55)

[node name="AreaFa#" type="Area2D" parent="Fa#"]
scale = Vector2(0.295, 0.295)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fa#/AreaFa#" groups=["Teclas"]]
position = Vector2(200, 1198.31)
shape = SubResource("RectangleShape2D_1be1q")

[node name="LabelFa#" type="Label" parent="Fa#"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = 603.636
offset_right = 105.0
offset_bottom = 676.636
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_w5pfu")
text = "Fa#"
horizontal_alignment = 1

[node name="La" parent="." instance=ExtResource("2_ucd5f")]
position = Vector2(1301, 486)
scale = Vector2(1, 0.55)

[node name="AreaLa" type="Area2D" parent="La"]
scale = Vector2(0.565, 0.565)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="La/AreaLa" groups=["Teclas"]]
polygon = PackedVector2Array(3.5461, 3.5461, 297.872, 3.5461, 297.872, 1230.5, 319.149, 1250, 395.39, 1250, 395.39, 1900.71, 3.5461, 1900.71)

[node name="LabelLa" type="Label" parent="La"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 76.0
offset_top = 907.273
offset_right = 161.0
offset_bottom = 994.273
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_6dyhk")
text = "La"
horizontal_alignment = 1

[node name="Sol#" parent="." instance=ExtResource("4_kmn7o")]
position = Vector2(1247, 485)
scale = Vector2(1, 0.55)

[node name="AreaSol#" type="Area2D" parent="Sol#"]
scale = Vector2(0.295, 0.295)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sol#/AreaSol#" groups=["Teclas"]]
position = Vector2(200, 1198.31)
shape = SubResource("RectangleShape2D_1be1q")

[node name="LabelSol#" type="Label" parent="Sol#"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = 603.636
offset_right = 105.0
offset_bottom = 676.636
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_hcy0r")
text = "Sol#"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Si" parent="." instance=ExtResource("3_0v2p7")]
position = Vector2(1526, 488)
scale = Vector2(1, 0.55)

[node name="AreaSi" type="Area2D" parent="Si"]
scale = Vector2(0.565, 0.565)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Si/AreaSi" groups=["Teclas"]]
polygon = PackedVector2Array(101.064, 3.5461, 395.39, 3.5461, 397.163, 1900.71, 3.5461, 1900.71, 3.5461, 1250, 83.3333, 1250, 102.837, 1218.09)

[node name="LabelSi" type="Label" parent="Si"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 76.0
offset_top = 907.273
offset_right = 161.0
offset_bottom = 994.273
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_qyyqe")
text = "Si"
horizontal_alignment = 1

[node name="La#" parent="." instance=ExtResource("4_kmn7o")]
position = Vector2(1472, 487)
scale = Vector2(1, 0.55)

[node name="AreaLa#" type="Area2D" parent="La#"]
scale = Vector2(0.295, 0.295)

[node name="CollisionShape2D" type="CollisionShape2D" parent="La#/AreaLa#" groups=["Teclas"]]
position = Vector2(200, 1198.31)
shape = SubResource("RectangleShape2D_1be1q")

[node name="LabelLa#" type="Label" parent="La#"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = 603.636
offset_right = 105.0
offset_bottom = 676.636
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_lykuo")
text = "La#"
horizontal_alignment = 1

[node name="Partitura" parent="." instance=ExtResource("5_gh5ej")]

[node name="BordeDivis" type="Panel" parent="."]
offset_top = 491.0
offset_right = 1920.0
offset_bottom = 509.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yg582")

[node name="Notas" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ControlSuperior" parent="." instance=ExtResource("6_yuc5j")]
offset_left = 15.0
offset_right = 15.0

[node name="menu" type="Panel" parent="."]
offset_left = 2.0
offset_top = 490.0
offset_right = 1926.0
offset_bottom = 1086.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xuex3")

[node name="Titulo" type="Label" parent="menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -401.0
offset_top = 19.0
offset_right = 406.0
offset_bottom = 248.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.000113828, 0.000113828, 0.000113828, 1)
theme_override_font_sizes/font_size = 100
text = "¡Has terminado de componer tu pieza!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="botonEscuchar" type="Button" parent="menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.551
anchor_right = 0.5
anchor_bottom = 0.551
offset_left = -187.0
offset_top = -10.396
offset_right = 180.0
offset_bottom = 56.604
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_6kdvu")
theme_override_styles/hover = ExtResource("4_4l70p")
theme_override_styles/pressed = ExtResource("5_cafb1")
theme_override_styles/disabled = SubResource("StyleBoxFlat_tjtqb")
theme_override_styles/focus = SubResource("StyleBoxFlat_d5b1t")
text = "Escuchar"

[node name="botonSalir" type="Button" parent="menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.868
anchor_right = 0.5
anchor_bottom = 0.868
offset_left = -187.0
offset_top = -33.328
offset_right = 180.0
offset_bottom = 31.672
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_6kdvu")
theme_override_styles/hover = ExtResource("4_4l70p")
theme_override_styles/pressed = ExtResource("5_cafb1")
text = "Salir"

[connection signal="pressed" from="Madera/botonDelete" to="." method="_on_boton_delete_pressed"]
[connection signal="pressed" from="Madera/botonComplete" to="." method="_on_boton_complete_pressed"]
[connection signal="input_event" from="Do/AreaDo" to="." method="_on_area_do_input_event"]
[connection signal="input_event" from="Re/AreaRe" to="." method="_on_area_re_input_event"]
[connection signal="input_event" from="Do#/AreaDo#" to="." method="_on_area_doS_input_event"]
[connection signal="input_event" from="Mi/AreaMi" to="." method="_on_area_mi_input_event"]
[connection signal="input_event" from="Re#/AreaRe#" to="." method="_on_area_reS_input_event"]
[connection signal="input_event" from="Fa/AreaFa" to="." method="_on_area_fa_input_event"]
[connection signal="input_event" from="Sol/AreaSol" to="." method="_on_area_sol_input_event"]
[connection signal="input_event" from="Fa#/AreaFa#" to="." method="_on_area_faS_input_event"]
[connection signal="input_event" from="La/AreaLa" to="." method="_on_area_la_input_event"]
[connection signal="input_event" from="Sol#/AreaSol#" to="." method="_on_area_solS_input_event"]
[connection signal="input_event" from="Si/AreaSi" to="." method="_on_area_si_input_event"]
[connection signal="input_event" from="La#/AreaLa#" to="." method="_on_area_laS_input_event"]
[connection signal="pressed" from="menu/botonEscuchar" to="." method="_on_boton_escuchar_pressed"]
[connection signal="pressed" from="menu/botonSalir" to="." method="_on_boton_salir_pressed"]
